# dbx

./: .gitattributes  .gitignore
apps/desktop/src/components/editor/: EditorSettingsDialog.vue
apps/desktop/src/components/grid/: DataGrid.vue
apps/desktop/src/components/layout/: ContentArea.vue
apps/desktop/src/components/sidebar/: TreeItem.vue
apps/desktop/src/composables/: useWindowControls.ts
apps/desktop/src/composables/__tests__/: useWindowControls.spec.ts
apps/desktop/src/i18n/locales/: en.ts  es.ts  it.ts  ja.ts  pt-BR.ts  zh-CN.ts  zh-TW.ts
apps/desktop/src/lib/: api.ts  http.ts  tauri.ts
apps/desktop/src/lib/__tests__/common/: autoRefreshInterval.spec.ts
apps/desktop/src/lib/backend/: api.ts  http.ts  tauri.ts
apps/desktop/src/lib/common/: autoRefreshInterval.ts
crates/dbx-core/: Cargo.toml
crates/dbx-core-legacy/: Cargo.toml
crates/dbx-core/src/: agent_service.rs  ai.rs  connection.rs  data_grid_tdengine_sql.rs  database_export.rs  production_safety.rs  query_result_sql.rs  schema.rs  sql.rs  sql_analysis.rs  sql_risk.rs  transfer.rs  update.rs  xlsx_export.rs
crates/dbx-core/src/db/: elasticsearch_driver.rs  manticoresearch.rs  mysql.rs  ob_oracle.rs  postgres.rs  sqlserver.rs  ssh_tunnel.rs
crates/dbx-core/src/schema/: duckdb_metadata.rs  normalization.rs
crates/libduckdb-sys-legacy/: .cargo_vcs_info.json  Cargo.toml  build.rs
docs/: electron-migration-assessment.md
scripts/: build-windows-legacy.ps1  build-windows-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-legacy/: Cargo.toml  tauri.conf.json
src-tauri/src/: data_dir.rs  lib.rs  webview2_runtime.rs
src-tauri/src/commands/: app_settings.rs  mcp_bridge.rs  redis_pubsub_server.rs  update.rs
