[workspace]

[package]
name = "dbx"
version = "0.5.50"
description = "Open-source database management tool"
authors = ["skyler"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[lib]
name = "dbx_lib"
path = "../src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbx"
path = "../src-tauri/src/main.rs"

[features]
default = ["duckdb-bundled", "mq-admin", "legacy-ring-crypto", "legacy-native-window-decorations"]
duckdb-bundled = ["duckdb", "dbx-core/duckdb-bundled"]
legacy-ring-crypto = []
legacy-native-window-decorations = []
mq-admin = ["dbx-core/mq-admin"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
cc = "=1.2.15"
jobserver = "=0.1.32"
subprocess = "=0.2.9"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "=3.14.0"
base64 = "0.22"
log = "0.4"
zeroize = "=1.8.1"
zeroize_derive = "=1.4.2"
hashbrown = "=0.16.1"
indexmap = "=2.9.0"
windows-result = "=0.3.4"
ipconfig = "=0.3.2"
unicode-segmentation = "=1.12.0"
ed25519-dalek = "=2.1.1"
tauri = { version = "=2.10.3", features = ["tray-icon"] }
tauri-utils = "=2.8.3"
cargo-platform = "=0.1.8"
cargo_metadata = "=0.18.1"
toml = "=0.9.2"
toml_parser = "=1.0.4"
toml_writer = "=1.0.4"
serde_spanned = "=1.0.0"
tauri-plugin-log = "=2.7.0"
byte-unit = "=5.1.6"
tokio-postgres = { version = "=0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-protocol = "=0.6.8"
postgres-types = "=0.2.9"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
tempfile = "=3.10.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.37"
time-core = "=0.1.2"
tauri-plugin-deep-link = "=2.4.3"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-fs = "=2.5.0"
tauri-plugin-shell = "=2.3.1"
open = "=5.2.0"
tauri-plugin-updater = "=2.9.0"
tauri-plugin-process = "=2.3.0"
tauri-plugin-window-state = "=2.4.0"
redis = { version = "0.32.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "cluster-async"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
portpicker = "0.1.1"
duckdb = { version = "=1.3.2", optional = true }
comfy-table = "=7.1.4"
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls", "sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "=0.12.4", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
mongodb = "=3.2.5"
percent-encoding = "2"
url = "=2.5.4"
idna = "=1.0.3"
idna_adapter = "=1.2.0"
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }
home = "=0.5.9"
csv = "1.4.0"
calamine = "0.30.1"
zip = { version = "=4.2.0", default-features = false, features = ["deflate"] }
dbx-core = { package = "dbx-core-legacy", path = "../crates/dbx-core-legacy", default-features = false, features = ["legacy-ring-crypto", "legacy-russh-054", "legacy-mysql-032", "legacy-sqlparser-060"] }
axum = { version = "=0.7.9", features = ["ws"] }
font-kit = "0.14.3"
image = { version = "=0.25.5", default-features = false, features = ["png", "bmp"] }
tauri-plugin-clipboard-manager = "=2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication"] }

[patch.crates-io]
libduckdb-sys = { path = "../crates/libduckdb-sys-legacy" }
webview2-com-sys = { path = "../crates/webview2-com-sys-legacy" }
