[package]
name = "dbx-core-legacy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "dbx_core"
path = "../dbx-core/src/lib.rs"

[features]
default = ["duckdb-bundled", "mq-admin"]
duckdb-bundled = ["duckdb/bundled"]
legacy-ring-crypto = []
legacy-russh-054 = []
legacy-mysql-032 = []
legacy-sqlparser-060 = []
mq-admin = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
once_cell = "1"
serde_with = "=3.14.0"
zeroize = "=1.8.1"
zeroize_derive = "=1.4.2"
hashbrown = "=0.16.1"
indexmap = "=2.9.0"
windows-result = "=0.3.4"
ipconfig = "=0.3.2"
unicode-segmentation = "=1.12.0"
ed25519-dalek = "=2.1.1"
regex = "1"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
rand_core = "0.6.4"
percent-encoding = "2"
encoding_rs = "0.8"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.37"
time-core = "=0.1.2"
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
anyhow = "1"
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
tokio-postgres = { version = "=0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-protocol = "=0.6.8"
postgres-types = "=0.2.9"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "backup", "functions", "column_decltype"] }
mysql_async = { version = "=0.32.2", default-features = false, features = ["rustls-tls"] }
mysql_common = { version = "=0.30.6", features = ["chrono"] }
mysql-common-derive = "=0.30.2"
frunk_proc_macro_helpers = "=0.1.4"
frunk_core = "=0.4.4"
proc-macro-crate = "=3.2.0"
sqlparser = { version = "=0.60.0", features = ["visitor"] }
redis = { version = "0.32.2", features = ["tokio-comp", "tls-rustls", "tls-rustls-insecure", "tokio-rustls-comp", "sentinel", "cluster-async"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
duckdb = { version = "=1.3.2", optional = true }
comfy-table = "=7.1.4"
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls", "sql-browser-tokio"] }
reqwest = { version = "=0.12.4", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
futures = "0.3"
iana-time-zone = "=0.1.61"
mongodb = "=3.2.5"
url = "=2.5.4"
idna = "=1.0.3"
idna_adapter = "=1.2.0"
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }
pageant = "0.1.0"
home = "=0.5.9"
portpicker = "0.1.1"
csv = "1"
calamine = { version = "0.30.1", features = ["dates"] }
quick-xml = "0.37"
base64 = "0.22"
jsonwebtoken = "9"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
async-trait = "0.1"
bytes = "1"
font-kit = "0.14.3"
zip = { version = "=4.2.0", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.32", features = ["system"] }
